--- a/02_inventarisasi_lab_komputer/pnpm-workspace.yaml
+++ b/02_inventarisasi_lab_komputer/pnpm-workspace.yaml
@@ -1,5 +1,10 @@
 packages:
   - .
+
 ignoredBuiltDependencies:
   - sharp
   - unrs-resolver
+
+onlyBuiltDependencies:
+  - better-sqlite3
+  - prisma
