--- a/02_inventarisasi_lab_komputer/package.json
+++ b/02_inventarisasi_lab_komputer/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
