Refactor inventory management: add motherboard support, update Dockerfile, and enhance validation

--- a/02_inventarisasi_lab_komputer/Dockerfile
+++ b/02_inventarisasi_lab_komputer/Dockerfile
@@ -1,25 +1,16 @@
-FROM node:lts-alpine3.23
+FROM node:lts-slim
+
 WORKDIR /app/
 
-# Instal toolchain untuk kompilasi native modules
-# build-base berisi gcc, g++, make, dll.
-RUN apk add --no-cache \
-    build-base \
+RUN apt-get update && apt-get install -y \
     python3 \
-    openssl \
-    bash
+    make \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
 
-# Setup pnpm
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
-# Copy package management files
 COPY package.json pnpm-lock.yaml ./
 
-# Karena better-sqlite3 butuh kompilasi, pnpm butuh izin build
-# Ini sesuai dengan catatan di dokumentasi yang Anda lampirkan
 RUN pnpm install --frozen-lockfile
-
-# COPY . .
-
-# Generate Prisma Client (targetkan ke output sesuai dokumentasi Anda)
-# `RUN pnpm dlx prisma generate
+RUN pnpm approve-builds
