--- a/02_inventarisasi_lab_komputer/pnpm-workspace.yaml
+++ b/02_inventarisasi_lab_komputer/pnpm-workspace.yaml
@@ -6,5 +6,9 @@ ignoredBuiltDependencies:
   - unrs-resolver
 
 onlyBuiltDependencies:
+  - '@prisma/engines'
   - better-sqlite3
+  - esbuild
   - prisma
+  - sharp
+  - unrs-resolver
