--- a/02_inventarisasi_lab_komputer/docker-compose.yml
+++ b/02_inventarisasi_lab_komputer/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - 3000:3000
+      - 8000:8000
     volumes:
       - ./:/app/
+      - /app/node_modules
     command: pnpm run dev
